# PyWhiz

./: .gitignore  README.md  pyproject.toml
src/pywhiz/: __init__.py  ollama_api.py
