[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "PyWhiz"
version = "0.1.3"
description = "Python package to make llm calls much easier"
authors = [
    { name="Filipe Alexandre Judicibus Alcaide"}
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "urllib3>=2.5.0",
    "requests>=2.32.5",
]

# Palavras-chave para PyPI
keywords = [
    "AI", "LLM", "Chatbot",
    "Ollama", "Gemini", "OpenAI",
    "Python", "API", "Wrapper",
    "Machine Learning", "NLP"
]


# Classificadores para PyPI (versões, tópicos, etc.)
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/FilipeAlcaide04/PyWhiz"
Issues = "https://github.com/FilipeAlcaide04/PyWhiz/issues"
LinkedIn = "https://www.linkedin.com/in/filipe-alcaide-ab3035298/"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pylint]
max-line-length = 100
disable = ["C0114", "C0115", "C0116"]
